--- a/befizetesek.html
+++ b/befizetesek.html
@@ -172,7 +172,7 @@
       <a href="befizetesek.html">Befizetések</a>
       <a href="utinaplo.html">Úticélok</a>
       <a href="eldujra.html">Éld újra</a>
-      <a href="#" onclick="alert('A bejelentkezés az index.html oldalon érhető el.')">BEJELENTKEZÉS</a>
+      <a href="#" onclick="alert('A bejelentkezés az index.html oldalon érhető el.')">Bejelentkezés</a>
     </div>
   </div>
 
