--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <a href="befizetesek.html">Befizetések</a>
       <a href="utinaplo.html">Úticélok</a>
       <a href="eldujra.html">Éld újra!</a>
-      <a href="#" onclick="showModal()">BEJELENTKEZÉS</a>
+      <a href="#" onclick="showModal()">Bejelentkezés</a>
     </div>
   </div>
 
