--- a/szamlalo.html
+++ b/szamlalo.html
@@ -206,8 +206,7 @@
       <a href="szamlalo.html">Számláló</a>
       <a href="befizetesek.html">Befizetések</a>
       <a href="utinaplo.html">Úticélok</a>
-      <a href="eldujra.html">Éld újra!</a>
-      <a href="#" onclick="alert('A bejelentkezés az index.html oldalon érhető el.')">Bejelentkezés</a>
+      <a href="eldujra.html">Éld újra</a>
     </div>
   </div>
 
