--- a/szamlalo.html
+++ b/szamlalo.html
@@ -205,14 +205,14 @@
     <div class="menu" id="navMenu">
       <a href="szamlalo.html">Számláló</a>
       <a href="befizetesek.html">Befizetések</a>
-      <a href="utinaplo.html">Úticélok</a>
       <a href="eldujra.html">Éld újra</a>
+      <a href="tudnivalok.html">Információk</a>
     </div>
   </div>
 
   <div class="container">
     <h1>VakációVágyó <br>2026</h1>
-    <p><b><i>Álomgyűjtés alakulása a <br> <span class="meret"><b><u>900.000 Ft</u></b> </span><br>cél felé.</i></b></p>
+    <p><b><i>Álomgyűjtés alakulása a <br> <span class="meret"><b><u> 1.000.000 Ft</u></b> </span><br>cél felé.</i></b></p>
 
     <!-- Összesített számláló -->
     <div class="counter-box">
@@ -270,7 +270,7 @@
     const sandorValue = 0;
     const szilviaValue = 0;
     const kristofValue = 0;
-    const individualMax = 300000;
+    const individualMax = 340000;
 
     function animateCounter() {
       const el = document.getElementById("currentAmount");
