--- a/befizetesek.html
+++ b/befizetesek.html
@@ -170,9 +170,8 @@
     <div class="menu" id="navMenu">
       <a href="szamlalo.html">Számláló</a>
       <a href="befizetesek.html">Befizetések</a>
-      <a href="utinaplo.html">Úticélok</a>
       <a href="eldujra.html">Éld újra</a>
-    
+      <a href="tudnivalok.html">Információk</a>
     </div>
   </div>
 
