--- a/index.html
+++ b/index.html
@@ -178,6 +178,44 @@
       from { opacity: 0; transform: translateY(30px); }
       to { opacity: 1; transform: translateY(0); }
     }
+/* Bejelentkezés gomb a képernyő jobb felső sarkában nagyobb kijelzőn */
+@media (min-width: 992px) {
+  .container button {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    margin: 0;
+    z-index: 1100; /* hogy a navbar fölött is látszódjon */
+  }
+}
+/* Kép és utolsó bekezdések egymás mellett nagyobb képernyőn */
+@media (min-width: 992px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container img {
+    margin-bottom: 0;
+  }
+
+  .extra-text {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 2em;
+    max-width: 300px;
+    text-align: left;
+  }
+
+  /* A kép és a szöveg egymás mellé */
+  .container img,
+  .extra-text {
+    display: inline-block;
+  }
+}
+
+
   </style>
 </head>
 <body>
