--- a/befizetesek.html
+++ b/befizetesek.html
@@ -182,7 +182,7 @@
    
     <p><b><i>Minden apró számít, tegyél egy picit Te is a repülőmalacba!</i></b></p>
     <p><b><i>Ne feledd! Sok kicsi, sokra megy!</i></b></p>
-    <p><b><i>A megtakarításról szóló tranzakciót töltsd le és küldd el a <u>kristof.orosz.11@gmail.com</u> email címre!</i></b></p>
+    <p><b><i>A megtakarításról szóló tranzakciót töltsd le és küldd el a <u>vakaciovagyo@gmail.com</u> email címre!</i></b></p>
 
     <a href="https://smartlinetravel.hu/menu/last-minute">
       <img src="ajanlat.png" alt="Ajánlat">
