--- a/eldujra.html
+++ b/eldujra.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Befizetések</title>
+  <title>Éld újra</title>
   <style>
     * {
       box-sizing: border-box;
@@ -158,7 +158,7 @@
     img {
   max-width: 100%;
   height: auto;
-  display: block;
+  display: block; /* opcionális, hogy ne legyen felesleges üres hely alatta */
 }
 
   </style>
@@ -182,25 +182,17 @@
     </div>
   </div>
 
-  <img src="hogyan.jpg" alt="Útmutató" height="200px" width="1000px">
-  <div class="container">
-    <h1>Befizetések</h1>
+<a href="https://drive.google.com/drive/folders/1w-CE0MJYGWK77peUpGoNRcC7wnFzwKk_">
+<img src="Dia1.JPG" alt="Kréta 2018" width="250px" height="500px">
+</a>
 
-    <!-- Itt jönnének a befizetési kártyák -->
-   
-    <p><b><i>Minden apró számít, tegyél egy picit Te is a repülőmalacba!</i></b></p>
-    <p><b><i>Ne feledd! Sok kicsi, sokra megy!</i></b></p>
-    <p><b><i>A megtakarításról szóló tranzakciót töltsd le és küldd el a <u>vakaciovagyo@gmail.com</u> email címre!</i></b></p>
+<a href="https://drive.google.com/drive/folders/10nKwVzSevBwvGSIQwu8PARCIfN7u3qfa">
+<img src="Dia2.JPG" alt="Kréta 2022" width="250px" height="500px">
+</a>
 
-    <a href="https://smartlinetravel.hu/menu/last-minute">
-      <img src="ajanlat.png" alt="Ajánlat">
-    </a>
-  </div>
+<a href="">
+<img src="Dia3.jpg" alt="Folytatódjon a kaland 2026..." width="250px" height="500px">
+</a>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById('navMenu').classList.toggle('active');
-    }
-  </script>
 </body>
 </html>
