--- a/tudnivalok.html
+++ b/tudnivalok.html
@@ -114,6 +114,7 @@
       <a href="szamlalo.html">Számláló</a>
       <a href="befizetesek.html">Befizetések</a>
       <a href="eldujra.html">Éld újra</a>
+      <a href="akciok.html">Akciók</a>
       <a href="tudnivalok.html">Információk</a>
       
     </div>
