--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
 
   <!-- MENÜSÁV -->
 
-
+ <img src="H01+.jpg" alt="Útmutató" height="300px" width="1500px">
+  <div class="container">
   <div class="container">
     <h1>VakációVágyó <br> 2026</h1>
     <p><b><i>A nagy utazás sok kis aprópénzzel kezdődik!</i></b></p>
