--- a/akciok.html
+++ b/akciok.html
@@ -88,7 +88,7 @@
       <img src="akcio01.jpg" alt="Akció">
       <div class="card-body">
         <h3 class="card-title"> Rakj félre egy kis aprót az extra bónuszért!</h3>
-        <p class="card-text"> <b>Ha 2025.10.12.-ig félreraksz legalább 10.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyarási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf </p>
+        <p class="card-text"> <b>Ha 2025.10.12.-ig félreraksz legalább 10.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf </p>
       </div>
     </article>
   </main>
