--- a/befizetesek.html
+++ b/befizetesek.html
@@ -190,8 +190,10 @@
   </div>
 
   <div class="kozep">
-  <img src="hogyan.jpg" alt="Útmutató" height="200px" width="1000px">
-  <img src="H01+.jpg" alt="Útmutató" height="200px" width="1000px">
+    <a href="">
+  <img src="hogyan.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
+  <a href="akciok.html">
+  <img src="h01.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   </div>
   <div class="container">
     <h1>Befizetések</h1>
