--- a/befizetesek.html
+++ b/befizetesek.html
@@ -193,7 +193,7 @@
     <a href="">
   <img src="hogyan.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   <a href="akciok.html">
-  <img src="h01.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
+  <img src="akcióhojav.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   </div>
   <div class="container">
     <h1>Befizetések</h1>
