--- a/szamlalo.html
+++ b/szamlalo.html
@@ -190,6 +190,11 @@
     .meret {
       font-size: 30px;
     }
+    .individual-amount {
+  margin-top: 0.8em;
+  font-weight: bold; /* kis térköz a perselyszám után */
+}
+
   </style>
 </head>
 <body>
