--- a/akciok.html
+++ b/akciok.html
@@ -91,6 +91,14 @@
         <p class="card-text"> <b>Ha 2025.10.12.-ig félreraksz legalább 20.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf </p>
       </div>
     </article>
+     <article class="card">
+      <img src="akciok02.jpg" alt="Akció">
+      <div class="card-body">
+        <h3 class="card-title"> Tudtad? Lemondok a tartozásod egy részéről!</h3>
+        <p class="card-text"> <b> Annak egy részét félreteszem a saját perselyszámlámra a nyaralási alapba!
+ </b> <br> Hiszen sok kicsi sokra megy!</p>
+      </div>
+    </article>
   </main>
 
   <script>
