--- a/befizetesek.html
+++ b/befizetesek.html
@@ -195,6 +195,9 @@
   <a href="akciok.html">
   <img src="akcióhojav.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   </div>
+  <a href="akciok.html">
+  <img src="akcio2h.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
+  </div>
   <div class="container">
     <h1>Befizetések</h1>
 
