--- a/akciok.html
+++ b/akciok.html
@@ -85,12 +85,12 @@
   <main class="container">
     <h1>AKCIÓK</h1>
     <article class="card">
-      <img src="akciok01jav.jpg" alt="Akció">
+      <img src="akcio001.jpg" alt="Akció">
       <div class="card-body">
         <h3 class="card-title"> Rakj félre egy kis aprót az extra bónuszért!</h3>
-        <p class="card-text"> <b>Ha 2025.10.12.-ig félreraksz legalább 20.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf </p>
+        <p class="card-text"> <b>Ha 2025.09.30.-ig félreraksz legalább 20.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br> Megj.: Az akció más akciókkal nem összevonható és O.Kristófnak nem jár bónusz.</p>
       </div>
-    </article>
+    </article> <br>
      <article class="card">
       <img src="akciok02.jpg" alt="Akció">
       <div class="card-body">
