--- a/befizetesek.html
+++ b/befizetesek.html
@@ -125,9 +125,14 @@
     .label {
       font-weight: bold;
       display: inline-block;
-      width: 100px;
+      width: 600px;
     }
 
+    .label2 {
+      font-weight: bold;
+      display: inline-block;
+      width: 100px;
+    }
     .download-link {
       margin-left: 10px;
       font-size: 0.9em;
@@ -144,7 +149,7 @@
         padding: 1em;
       }
       .label {
-        width: 90px;
+        width: 600px;
       }
     }
 
@@ -208,11 +213,14 @@
     <div class="card">
       <div class="card-title"></div>
       <div class="card-content">
+        <div><span class="label">Befizető: Orosz Kristóf</span></div>
+        <div><span class="label">Perselyszámlanév: VakációVágyó 2026 - Kristóf</span></div>
+        <div><span class="label">Perselyszámlaszám: 11773047-02016142-00000000 </span></div>
         <div><span class="label">Összeg: 40.000 - Ft</span></div>
         <div><span class="label">Típus: Persely</span></div>
         <div><span class="label">Dátum: 2025.09.02.</span></div>
         <div>
-          <span class="label">Tranzakció:</span> #VVB0001
+          <span class="label2">Tranzakció:</span> #VVB0001
           <a href="https://drive.google.com/file/d/11uIWijYF5XQ7H0Upd5YSDegLwKYVBZFp/view?usp=sharing" target="_blank" class="download-link">Letöltés</a>
         </div>
       </div>
@@ -221,11 +229,14 @@
         <div class="card">
       <div class="card-title"></div>
       <div class="card-content">
+        <div><span class="label">Befizető: Orosz Kristóf</span></div>
+        <div><span class="label">Perselyszámlanév: VakációVágyó 2026 - Kristóf</span></div>
+        <div><span class="label">Perselyszámlaszám: 11773047-02016142-00000000 </span></div>
         <div><span class="label">Összeg: 20.000 - Ft</span></div>
         <div><span class="label">Típus: Persely</span></div>
         <div><span class="label">Dátum: 2025.09.03.</span></div>
         <div>
-          <span class="label">Tranzakció:</span> #VVB0002
+          <span class="label2">Tranzakció:</span> #VVB0002
           <a href="https://drive.google.com/file/d/1SQGIsCWklvPXNBf6gURxtxpPItnm6vXF/view?usp=sharing" target="_blank" class="download-link">Letöltés</a>
         </div>
       </div>
