--- a/szamlalo.html
+++ b/szamlalo.html
@@ -218,7 +218,7 @@
 
   <div class="container">
     <h1>VakációVágyó <br>2026</h1>
-    <p><b><i>Álomgyűjtés alakulása a <br> <span class="meret"><b><u> 1.000.000 Ft</u></b> </span><br>cél felé.</i></b></p>
+    <p><b><i>Álomgyűjtés alakulása az <br> <span class="meret"><b><u> 1.000.000 Ft</u></b> </span><br>cél felé.</i></b></p>
 
     <!-- Összesített számláló -->
     <div class="counter-box">
