--- a/befizetesek.html
+++ b/befizetesek.html
@@ -149,7 +149,7 @@
         padding: 1em;
       }
       .label {
-        width: 130px;
+        width: 90px;
       }
     }
 
@@ -213,7 +213,7 @@
     <div class="card">
       <div class="card-title"></div>
       <div class="card-content">
-        <div><span class="label">Befizető: Orosz Kristóf</span></div>
+        <div><span class="label">Befizető: O.Kristóf</span></div>
         <div><span class="label">Összeg: 40.000 - Ft</span></div>
         <div><span class="label">Típus: Persely</span></div>
         <div><span class="label">Dátum: 2025.09.02.</span></div>
@@ -227,7 +227,7 @@
         <div class="card">
       <div class="card-title"></div>
       <div class="card-content">
-        <div><span class="label">Befizető: Orosz Kristóf</span></div>
+        <div><span class="label">Befizető: O.Kristóf</span></div>
         <div><span class="label">Összeg: 20.000 - Ft</span></div>
         <div><span class="label">Típus: Persely</span></div>
         <div><span class="label">Dátum: 2025.09.03.</span></div>
