--- a/befizetesek.html
+++ b/befizetesek.html
@@ -143,6 +143,9 @@
     .download-link:hover {
       text-decoration: underline;
     }
+    .kozep {
+      text-align: center;
+    }
 
     @media (max-width: 600px) {
       .card {
@@ -195,14 +198,16 @@
   </div>
 
   <div class="kozep">
-    <a href="">
-  <img src="hogyan.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
+    <a href="hogyan.html">
+  <img src="hogyanjavitott.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   <a href="akciok.html">
+  </div>
+    
   <img src="akcio001h.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   </div>
-  <a href="akciok.html">
+  <a href="akciok.html"> 
   <img src="akcio2h.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
-  </div>
+
   <div class="container">
     <h1>Befizetések</h1>
 
