--- a/hogyan.html
+++ b/hogyan.html
@@ -153,7 +153,7 @@
     </section>
 
     <footer class="section" aria-label="Jogi megjegyzés">
-      <p class="hint">Megjegyzés: az elnevezések és menüpontok bankonként kis mértékben eltérhetnek, a fenti lépések általánosíthatók.</p>
+      <p class="hint">Megjegyzés: Az elnevezések és menüpontok bankonként kis mértékben eltérhetnek, a fenti lépések általánosíthatók.</p>
     </footer>
 
     <!-- Kép blokk a végén -->
