--- a/akciok.html
+++ b/akciok.html
@@ -62,6 +62,26 @@
       transition: background .2s;
     }
     .btn:hover { background: #6fa72d; }
+    button {
+  background-color: #22c55e;   /* zöld háttér */
+  color: #fff;                 /* fehér szöveg */
+  border: none;
+  padding: 10px 16px;
+  border-radius: 9999px;       /* teljesen lekerekített */
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color .2s ease;
+}
+
+button:hover {
+  background-color: #16a34a;   /* sötétebb zöld hover-re */
+}
+
+button:focus {
+  outline: 2px solid #bbf7d0;  /* halvány zöld fókuszkeret */
+  outline-offset: 2px;
+}
+
   </style>
 </head>
 <body>
@@ -88,7 +108,7 @@
       <img src="akcio001.jpg" alt="Akció">
       <div class="card-body">
         <h3 class="card-title"> Rakj félre egy kis aprót az extra bónuszért!</h3>
-        <p class="card-text"> <b>Ha 2025.09.30.-ig félreraksz legalább 20.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br> Megj.: Az akció más akciókkal nem összevonható és O.Kristófnak nem jár bónusz.</p>
+        <p class="card-text"> <b>Ha 2025.09.30.-ig félreraksz legalább 20.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br> Megj.: Az akció más akciókkal nem összevonható és O.Kristófnak nem jár bónusz. <br><br> <i>Érvényes: 2025. szeptember 30.-ig</i></p>
       </div>
     </article> <br>
      <article class="card">
@@ -96,9 +116,10 @@
       <div class="card-body">
         <h3 class="card-title"> Tudtad? Lemondok a tartozásod egy részéről!</h3>
         <p class="card-text"> <b> Annak egy részét félreteszem a saját perselyszámlámra a nyaralási alapba!
- </b> <br> Hiszen sok kicsi sokra megy!</p>
+ </b> <br> Hiszen sok kicsi sokra megy! <br> <br> <i>Érvényes: Visszavonásig</i></p>
       </div>
-    </article>
+    </article><br>
+     
   </main>
 
   <script>
