--- a/sksm.html
+++ b/sksm.html
@@ -230,7 +230,7 @@ border-radius: 8px;
         <ul>
           <li>A játékban való részvételhez <strong>jelentkezni kell egy megadott űrlap kitöltésével</strong>.</li>
           <li>A jelentkezéssel minden résztvevő elfogadja a jelen játékszabályzatot.</li>
-          <li>A játékból való <strong>visszalépésre csak a program indulásától számított négy hónap elteltével van lehetőség</strong>.</li>
+          <li>A játékból való <strong>visszalépésre csak a játék indulásától számított négy hónap elteltével van lehetőség az ötödik hónap 05.-ig napjáig.</strong> Tehát 2026. február utolsó napjától 2026. március 05.-ig van lehetőség visszalépésre.</li>
           <li>A visszalépéshez a résztvevőnek a hivatalos <strong>Visszalépési Űrlapot</strong>  kell kitölteni, amely a szabályok értelmében <strong>kizárólag csak a megadott időszakban érhető el a weboldalon a játékszabályzatban a lap alján.</strong> </li>
         </ul>
       </section>
